Bug 16079 - [patch] return an error on unknown property
Summary: [patch] return an error on unknown property
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: GLib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Rob Taylor
QA Contact: John (J5) Palmieri
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-23 14:56 UTC by Colin Walters
Modified: 2008-05-27 10:44 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
handle unknown property (558 bytes, patch)
2008-05-23 14:56 UTC, Colin Walters
Details | Splinter Review

Description Colin Walters 2008-05-23 14:56:08 UTC
Created attachment 16710 [details] [review]
handle unknown property

We shouldn't crash on getting an unknown property, patch attached.
Comment 1 Dan Williams 2008-05-23 15:02:55 UTC
See for example:

http://bugzilla.gnome.org/show_bug.cgi?id=534544
Comment 2 Colin Walters 2008-05-27 10:44:45 UTC
commit fde77bff42fac9ed95869a69acff4f9daab23e04
Author: Colin Walters <walters@verbum.org>
Date:   Tue May 27 13:35:20 2008 -0400

    Bug 16079: Return an error on unknown property
    
    https://bugs.freedesktop.org/show_bug.cgi?id=16079
    
    Previously we just asserted, not very useful.



Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.