Bug 16079: Return an error on unknown property

https://bugs.freedesktop.org/show_bug.cgi?id=16079

Previously we just asserted, not very useful.